--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,9 +6,16 @@ target_sources(etcpp PRIVATE
         lib/etcpp.cpp
 )
 
+
+set(config_file_dir "${CMAKE_CURRENT_BINARY_DIR}/config")
+set(config_file "${config_file_dir}/etconfig.hpp")
+set(config_file_in "${CMAKE_CURRENT_SOURCE_DIR}/cmake/etconfig.hpp.in")
+
+configure_file("${config_file_in}" "${config_file}" @ONLY)
+
 target_link_libraries(etcpp PRIVATE etcore)
 
-target_include_directories(etcpp PUBLIC include)
+target_include_directories(etcpp PUBLIC include ${config_file_dir})
 
 apply_cpp_flags(etcpp)
 
