fix(GODT-2894): Windows Compilation
Rather than building the system with mingw on msys, only build the go
library with a standalone mingw setup and the rest with MSCV.

The mingw binaries are downloaded automatically and the download
location can be controlled with the MINGW_CACHE_PATH variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include(compile_options)
 include(clang_tidy)
 include(clang_format)
 include(shared_lib_copy)
-
+include(mingw)
 
 add_subdirectory(go-lib)
 add_subdirectory(lib)
