--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ variables:
       - .cache
     when: 'always'
   tags:
-    - windows-bridge
+    - windows-export
 
 .env-darwin:
   variables:
@@ -83,7 +83,7 @@ stages:
 
 .script-config-cmake-win:
   script:
-     - cmake -S . -B $CMAKE_BUILD_DIR -G "Visual Studio 17 2022" -A x64
+     - cmake -S . -B $CMAKE_BUILD_DIR -G "Visual Studio 17 2022" -A x64 -DMINGW_CACHE_PATH=.cache -DVCPKG_TARGET_TRIPLET=x64-windows-static
 
 .script-config-cmake-unix:
   script:
