feat(GODT-2914): File Logging
Add file logging to the export tool. The logs are generated in the same
directory as the executable in the `logs` directory.

This patch also extends the constants with build time and git reversion
information.

Finally we also expose logging functions so that the C++ code can hook
into the Go log system.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(cli)
 find_package(cxxopts CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 
-target_link_libraries(cli PRIVATE etcpp cxxopts::cxxopts fmt::fmt)
+target_link_libraries(cli PRIVATE etcpp cxxopts::cxxopts)
 
 target_sources(cli PRIVATE
         bin/main.cpp
