feat(GODT-2918): Download Progress
When performing long running background tasks provide some form of
feedback to the user that the tasks are running.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -11,6 +11,8 @@ target_link_libraries(cli PRIVATE etcpp cxxopts::cxxopts)
 
 target_sources(cli PRIVATE
         bin/main.cpp
+        bin/tui_util.cpp
+        bin/tui_util.hpp
 )
 
 apply_cpp_flags(cli)
