fix(GODT-2914): Windows issues
* Missing expansion of gendef binary
* Files on disk can't have ':' chars

--- a/go-lib/CMakeLists.txt
+++ b/go-lib/CMakeLists.txt
@@ -33,7 +33,7 @@ else()
 	message(STATUS "gendef-bin=${gendef-bin}")
     endif()
     add_custom_target(go-lib-gendef
-        COMMAND gendef ${GO_LIB}
+        COMMAND ${gendef-bin} ${GO_LIB}
         BYPRODUCTS ${GO_DEF}
     )
 
