feat(GODT-2918): Add background task abstraction for cli
Rather than cancelling an export via the callback, add an explicit
method to cancel the task externally.

This patch also adds a helper to push updates from a task running in the
background to the foreground.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -9,10 +9,15 @@ find_package(fmt CONFIG REQUIRED)
 
 target_link_libraries(cli PRIVATE etcpp cxxopts::cxxopts)
 
+target_include_directories(cli PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+
 target_sources(cli PRIVATE
         bin/main.cpp
         bin/tui_util.cpp
         bin/tui_util.hpp
+        bin/tasks/task.hpp
+        bin/tasks/mail_task.cpp
+        bin/tasks/mail_task.hpp
 )
 
 apply_cpp_flags(cli)
