test: Separate GPA server from etcore.so
GPA cgo binary is now available as etgpa.so.

--- a/lib/tests/CMakeLists.txt
+++ b/lib/tests/CMakeLists.txt
@@ -13,10 +13,11 @@ target_sources(etcpp_test PRIVATE
     test_etutil.cpp
 )
 
-target_link_libraries(etcpp_test PRIVATE etcpp etcore Catch2::Catch2 Catch2::Catch2WithMain)
+target_link_libraries(etcpp_test PRIVATE etcpp etcore etgpa Catch2::Catch2 Catch2::Catch2WithMain)
 
 add_test(NAME etcpp-test
     COMMAND etcpp_test
 )
 
 copy_shared_libraries(etcpp_test etcore)
+copy_shared_libraries(etcpp_test etgpa)
