feat(GODT-2916): Handle messages that can't be assembled
Handle cases where messages can't be assembled. This can either be
because the address key is missing or there is an issue writing out eml
file.

When this happens we create a directory where we dump the body and the
attachments as individually.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = https://github.com/microsoft/vcpkg
+[submodule "bridge"]
+	path = bridge
+	url = https://gitlab.protontech.ch/go/bridge.git
