--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,7 @@ variables:
   CMAKE_BUILD_DIR: $CI_PROJECT_DIR/cmake-build-release
   CMAKE_INSTALL_DIR: $CI_PROJECT_DIR/cmake-install-release
   CMAKE_BUILD_CONFIG: "Release"
-  GIT_SUBMODULE_STRATEGY: recursive
-
+  # GIT_SUBMODULE_STRATEGY: recursive
 
 # ENV
 .env-windows:
@@ -16,6 +15,7 @@ variables:
   before_script:
     - New-Item -ItemType Directory -Path ${VCPKG_DEFAULT_BINARY_CACHE} -Force
     - $env:Path = "C:\\\\CMake\\bin;" + $env:Path
+  cache:
   cache:
     key: win-vcpkg
     paths:
@@ -61,8 +61,6 @@ variables:
     - export PATH=$(pwd)/.cache/bin:$PATH
     - export GOPATH="$CI_PROJECT_DIR/.cache"
     - export PATH=$PATH:$QT6DIR/bin
-    - $(git config --global -l | grep -o 'url.*gitlab.protontech.ch.*insteadof' | xargs -L 1 git config --global --unset &> /dev/null) || echo "nothing to remove"
-    - git config --global url.https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}.insteadOf https://${CI_SERVER_HOST}
   tags:
     - large
 
@@ -70,6 +68,11 @@ variables:
 stages:
   - test
   - build
+
+.script-config-git:
+  script:
+    - git config --global url.https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}.insteadOf https://${CI_SERVER_HOST}
+    - git submodule update --init --recursive
 
 .script-config-cmake-win:
   script:
@@ -105,10 +108,10 @@ stages:
     - ctest --build-config $CMAKE_BUILD_CONFIG --test-dir $CMAKE_BUILD_DIR -V
 
 lint:
-  stage: test
   tags:
     - medium
   script:
+    - !reference [.script-config-git, script]
     - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
     - !reference [.script-config-cmake-unix, script]
     - cmake --build $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG -t go-lib-lint
@@ -119,6 +122,7 @@ build-linux:
   extends:
     - .env-linux-build
   script:
+    - !reference [.script-config-git, script]
     - !reference [.script-config-cmake-unix, script]
     - !reference [.script-test, script]
     - !reference [.script-install, script]
@@ -132,6 +136,7 @@ build-linux:
 #  extends:
 #    - .env-darwin
 #  script:
+#    - !reference [.script-config-git, script]
 #    - !reference [.script-config-cmake-unix, script]
 #    - !reference [.script-test, script]
 #    - !reference [.script-install, script]
@@ -145,6 +150,7 @@ build-linux:
 #  extends:
 #    - .env-windows
 #  script:
+#    - !reference [.script-config-git, script]
 #    - !reference [.script-config-cmake-win, script]
 #    - !reference [.script-test, script]
 #    - !reference [.script-install, script]
