feat(GODT-2900): Retry network request upon failure
When it makes sense, sleep and retry the request in place until it
succeeds or a non-retryable error is encountered.

--- a/go-lib/CMakeLists.txt
+++ b/go-lib/CMakeLists.txt
@@ -114,7 +114,7 @@ add_custom_target(go-lib-lint
 add_custom_target(go-lib-mockgen
     COMMAND mockgen
         -self_package "github.com/ProtonMail/export-tool/internal/apiclient"
-        -package apiclient github.com/ProtonMail/export-tool/internal/apiclient Builder,Client > "${CMAKE_BINARY_DIR}/mocks_test.go"
+        -package apiclient github.com/ProtonMail/export-tool/internal/apiclient Builder,Client,RetryStrategy > "${CMAKE_BINARY_DIR}/mocks_test.go"
     COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_BINARY_DIR}/mocks_test.go" "${CMAKE_CURRENT_SOURCE_DIR}/internal/apiclient/mocks.go"
     COMMAND mockgen
         -self_package "github.com/ProtonMail/export-tool/internal/mail"
