feat(GODT-2900): Handle network down in CLI
Refactor task to split the CLI display from the actual tasks and to
allow the login calls to be cancelled as well.

When the network is lost the current task will print a message to notify
the user.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -15,9 +15,11 @@ target_sources(cli PRIVATE
         bin/main.cpp
         bin/tui_util.cpp
         bin/tui_util.hpp
+        bin/task_runner.hpp
         bin/tasks/task.hpp
         bin/tasks/mail_task.cpp
         bin/tasks/mail_task.hpp
+        bin/tasks/session_task.hpp
 )
 
 apply_cpp_flags(cli)
