fix(GODT-2894): Disable debug symbols for CGO on Mac OS
Debug symbol generation for the CGO shared library needs to be disabled
on mac. The new mac os linker does not work correctly with the output of
CGO.

Waiting on https://github.com/golang/go/issues/62577 to be completed.

--- a/go-lib/CMakeLists.txt
+++ b/go-lib/CMakeLists.txt
@@ -66,7 +66,8 @@ function(build_cgo_lib)
 
         list(APPEND ADDITIONAL_FLAGS -gccgoflags
             '-mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}'
-            -ldflags '-extldflags -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}'
+            # Due to a latest Mac os linker, we need to disable debug symbol generation for the time being (-w).
+            -ldflags '-w -extldflags -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}'
         )
     endif()
 
