feat(GODT-2959): Use correct app identifier

--- a/go-lib/cmake/constants.go.in
+++ b/go-lib/cmake/constants.go.in
@@ -27,4 +27,5 @@ const (
     ETDefaultAPIURL = "@ET_DEFAULT_API_URL@"
     ETBuildTime = "@ET_BUILD_TIME@"
     ETRevision = "@ET_REVISION@"
+    ETAppIdentifier = "@ET_APP_IDENTIFIER@"
 )
