--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ variables:
     http_proxy: proxy.plabs.ch:3128
     no_proxy: localhost,.plabs.ch,gitlab.protontech.ch,harbor.protontech.ch,127.0.0.1,127.0.0.0/8,172.16.0.0/12,10.0.0.0/8
   before_script:
-    - New-Item -ItemType Directory -Path $Env:VCPKG_DEFAULT_BINARY_CACHE -Force ;
+    - New-Item -ItemType Directory -Path $VCPKG_DEFAULT_BINARY_CACHE -Force ;
     - $Env:Path = "C:\\\\Program Files\\CMake\\bin;" + $Env:Path
     - $(Get-Command cmake).Source
     - cmake --version
@@ -86,16 +86,16 @@ stages:
 .script-config-cmake-win:
   script:
     - cmake
-       -S . -B "$Env:CMAKE_BUILD_DIR"
+       -S . -B "$CMAKE_BUILD_DIR"
        -G "Visual Studio 17 2022"
        -DCMAKE_GENERATOR_PLATFORM=x64
        -DCMAKE_CL_64=1
        -A "x64"
-       -DMINGW_CACHE_PATH="$Env:VCPKG_DEFAULT_BINARY_CACHE"
+       -DMINGW_CACHE_PATH="$VCPKG_DEFAULT_BINARY_CACHE"
        -DVCPKG_HOST_TRIPLET=x64-windows-static
        -DVCPKG_TARGET_TRIPLET=x64-windows-static
-       -DCMAKE_INSTALL_PREFIX="$Env:CMAKE_INSTALL_DIR"
-       $Env:CMAKE_SENTRY_OPTION
+       -DCMAKE_INSTALL_PREFIX="$CMAKE_INSTALL_DIR"
+       $CMAKE_SENTRY_OPTION
 
 .script-config-cmake-unix:
   script:
