--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -2,16 +2,16 @@
 # CLI Executable
 #
 
-add_executable(proton-export-cli)
+add_executable(proton-mail-export-cli)
 
 find_package(cxxopts CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 
-target_link_libraries(proton-export-cli PRIVATE etcpp cxxopts::cxxopts)
+target_link_libraries(proton-mail-export-cli PRIVATE etcpp cxxopts::cxxopts)
 
-target_include_directories(proton-export-cli PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+target_include_directories(proton-mail-export-cli PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 
-target_sources(proton-export-cli PRIVATE
+target_sources(proton-mail-export-cli PRIVATE
         bin/main.cpp
         bin/tui_util.cpp
         bin/tui_util.hpp
@@ -23,14 +23,14 @@ target_sources(proton-export-cli PRIVATE
 )
 
 
-apply_cpp_flags(proton-export-cli)
+apply_cpp_flags(proton-mail-export-cli)
 
-copy_shared_libraries(proton-export-cli etcore)
+copy_shared_libraries(proton-mail-export-cli etcore)
 
 if (WIN32)
     # For Win32 RC file
-    set(ET_CLI_FULL_NAME "Proton Export CLI")
-    set(ET_CLI_NAME "Proton Export")
+    set(ET_CLI_FULL_NAME "Proton Mail Export CLI")
+    set(ET_CLI_NAME "Proton Mail Export")
 
     set(CLI_RC_FILE "${CMAKE_CURRENT_BINARY_DIR}/resources.rc")
 
@@ -40,8 +40,8 @@ if (WIN32)
         @ONLY
     )
 
-    target_sources(proton-export-cli PRIVATE ${CLI_RC_FILE})
+    target_sources(proton-mail-export-cli PRIVATE ${CLI_RC_FILE})
 
 endif()
 
-install(TARGETS proton-export-cli)
+install(TARGETS proton-mail-export-cli)
